--- a/WebbShopOOPJoanathan/Pages/Shared/_Layout.cshtml
+++ b/WebbShopOOPJoanathan/Pages/Shared/_Layout.cshtml
@@ -19,8 +19,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Hem</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index1">Produkts</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Köp</a>
                         </li>
